--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Rentcar",
+  "name": "Rentcar Kokand – Avtomobil ijarasi xizmati",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,16 +8,20 @@
       "type": "image/x-icon"
     },
     {
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
+      "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "theme_color": "#000d6b",
+  "background_color": "#ffffff",
+  "orientation": "portrait",
+  "lang": "uz"
 }
