--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-snap": "^1.23.0",
+    "react-toastify": "^11.0.5",
     "reactstrap": "^9.1.1",
     "remixicon": "^2.5.0",
     "slick-carousel": "^1.8.1",
