--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "scripts": {
     "dev": "vite",
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "CI=false GENERATE_SOURCEMAP=false react-scripts build",
+    "build:analyze": "CI=false GENERATE_SOURCEMAP=false npm run build && npx webpack-bundle-analyzer build/static/js/*.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
